added exception for invalid fields